# VideoEngine

./: CMakeLists.txt  README.md
doc/: snap_video3dapp.xcf  viden.dox
doc/html/: FileUtils_8h_source.html  ImageDefs_8h_source.html  OcvUtils_8h_source.html  Player_8h.html  Player_8h__dep__incl.map  Player_8h__dep__incl.md5  Player_8h__incl.map  Player_8h__incl.md5  Player_8h_source.html  StringUtils_8h_source.html  TimeUtils_8h_source.html  VideoDefs_8h_source.html  VideoUtils_8h_source.html  annotated.html  classes.html  classoscv_1_1FileUtils-members.html  classoscv_1_1FileUtils.html  classoscv_1_1IPlayer-members.html  classoscv_1_1IPlayer.html  classoscv_1_1ImageDefs-members.html  classoscv_1_1ImageDefs.html  classoscv_1_1OcvUtils-members.html  classoscv_1_1OcvUtils.html  classoscv_1_1VideoDefs-members.html  classoscv_1_1VideoDefs.html  classoscv_1_1VideoUtils-members.html  classoscv_1_1VideoUtils.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaceoscv.html  (+1 more)
doc/html/search/: all_4.js  all_5.js  all_6.js  all_7.js  (+27 more)
inc/: Definitions.h  FileUtils.h  ImageDefs.h  Player.h  ProgressBar.h  TimeUtils.h  VideoDefs.h  VideoUtils.h
src/: ColorDef.h  Drawing.h  GeneralDefs.cpp  GeneralDefs.h  ImageDefs.cpp  ImagePlayer.cpp  ImagePlayer.h  ImageUtils.h  MathUtils.h  OcvUtils.h  StringUtils.h  VideoDefs.cpp  VideoPlayer.cpp  VideoPlayer.h  VideoUtils.cpp
